Fix extra vertical scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,6 @@ body.light-mode {
 html,
 body {
     overflow-x: hidden;
-    max-width: 100vw;
 }
 
 body {
